Menu no longer jumps up a couple of pixels when in mobile view

--- a/_assets/css/_header.scss
+++ b/_assets/css/_header.scss
@@ -19,6 +19,11 @@
   display: flex;
 }
 
+.header-nav__left, .header-nav__center {
+  padding-top: 6px;
+  padding-bottom: 7px;
+}
+
 .header-nav__expander {
   flex-grow: 1;
 }
